fix hibernate error

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -35,7 +35,7 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/HappyhourBackEnd?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://localhost:3306/happyhourbackend?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
         password: root
         hikari:
@@ -55,6 +55,8 @@ spring:
             hibernate.cache.use_second_level_cache: false
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
+            hibernate:
+                ddl-auto: update
     liquibase:
         contexts: dev
     mail:
