--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/selenium-webdriver": "3.0.8",
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "0.6.2",
-    "browser-sync": "2.24.6",
+    "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "2.2.2",
     "cache-loader": "1.2.2",
     "chai": "4.1.2",
@@ -66,31 +66,30 @@
     "jest-sonar-reporter": "2.0.0",
     "lint-staged": "7.0.0",
     "merge-jsons-webpack-plugin": "1.0.14",
-    "mocha": "5.2.0",
     "mini-css-extract-plugin": "0.4.2",
+    "mocha": "5.2.0",
     "moment-locales-webpack-plugin": "1.0.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-loader": "2.1.1",
     "prettier": "1.11.1",
     "protractor": "5.4.0",
     "proxy-middleware": "0.15.0",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
+    "sass": "1.13.0",
+    "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
     "tapable": "1.0.0",
     "terser-webpack-plugin": "1.0.0",
     "thread-loader": "1.1.5",
     "to-string-loader": "1.1.5",
-    "ts-node": "5.0.1",
     "ts-loader": "4.0.1",
+    "ts-node": "5.0.1",
     "tslint": "5.9.1",
     "tslint-config-prettier": "1.9.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.7.2",
-    "sass": "1.13.0",
-    "sass-loader": "7.1.0",
-    "postcss-loader": "2.1.1",
-    "xml2js": "0.4.19",
     "webpack": "4.8.0",
     "webpack-cli": "2.1.3",
     "webpack-dev-server": "3.1.5",
@@ -98,7 +97,8 @@
     "webpack-notifier": "1.6.0",
     "webpack-visualizer-plugin": "0.1.11",
     "workbox-webpack-plugin": "3.2.0",
-    "write-file-webpack-plugin": "4.2.0"
+    "write-file-webpack-plugin": "4.2.0",
+    "xml2js": "0.4.19"
   },
   "engines": {
     "node": ">=8.9.0"
