--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -28,7 +28,7 @@ management:
             mode: full
     health:
         mail:
-            enabled: false # When using the MailService, configure an SMTP server and set this to true
+            enabled: true # When using the MailService, configure an SMTP server and set this to true
     metrics:
         enabled: false # http://micrometer.io/ is disabled by default, as we use http://metrics.dropwizard.io/ instead
 
@@ -86,7 +86,7 @@ jhipster:
         #allow-credentials: true
         #max-age: 1800
     mail:
-        from: HappybourBackEnd@localhost
+        from: happyhour494@gmail.com
     swagger:
         default-include-pattern: /api/.*
         title: HappybourBackEnd API
