--- a/.jhipster/HappyOrder.json
+++ b/.jhipster/HappyOrder.json
@@ -31,6 +31,15 @@
             "otherEntityName": "staff",
             "relationshipType": "many-to-one",
             "otherEntityField": "staffCode"
+        },
+        {
+            "relationshipName": "bookTable",
+            "otherEntityName": "bookTable",
+            "relationshipType": "many-to-one",
+            "relationshipValidateRules": [
+                "required"
+            ],
+            "otherEntityField": "id"
         }
     ],
     "fields": [
